--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,11 @@
             <artifactId>launch4j-maven-plugin</artifactId>
             <version>2.3.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20230227</version>
+        </dependency>
     </dependencies>
 
     <build>
